--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>coucou</title>
+</head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>j'ai changé le 1er paragraphe</h1>
+<p>This is a paragraph.</p>
 
 </body>
 </html>
