--- a/index.html
+++ b/index.html
@@ -4,5 +4,16 @@
 
 <h1>Defi levitation</h1>
 <p>paragraphe n°1</p>
+  <dl>
+  <dt>electro magnetique</dt>
+  <dd>
+    suspension du cube avec des aimants 
+  </dd>
+
+  <dt>tyroliennes</dt>
+  <dd>
+    Grace a la tyrolienne, le cube se deplacera sur la distace voulu avec une plus grande energie cinetique
+  </dd>
+</dl>
 </body>
 </html>
