--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>coucou</title>
+<title>Defi levitation TBNL</title>
 </head>
 <body>
 
-<h1>j'ai changé le 1er paragraphe</h1>
-<p>This is a paragraph.</p>
-
+<h1>Titre (a modifier)</h1>
+<p>Paragraphe 1 a modifier.</p>
+  <dt> suspension electro-magnetique
+    <dd>
+      En colant des aimants ous le cubes avec les poles inversés des poles des aimants au sol, 
+      le cube sera litteralement en levitation
+    </dd>
   <dt>tyroliennes</dt>
   <dd>
     Grace a la tyrolienne, le cube se deplacera sur la distace voulu avec une plus grande energie cinetique
