--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <body>
 
 <h1>Titre (a modifier)</h1>
+  <style>
+    color: green
+  </style>
 <p>Paragraphe 1 a modifier.</p>
   <dt> suspension electro-magnetique
     <dd>
