--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h1>Titre (a modifier)</h1>
   <style>
-    color: green
+    color: green;
   </style>
 <p>Paragraphe 1 a modifier.</p>
   <dt> suspension electro-magnetique
